--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "file-saver": "^1.3.8",
+    "fs": "0.0.1-security",
     "ts-fs": "^0.1.0",
     "xmlhttprequest": "^1.8.0"
   }
